--- a/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
+++ b/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
@@ -20,7 +20,9 @@
     <PackageReference Include="Ansuria.XFGloss" Version="1.1.3" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="NeoModules.NEP6" Version="0.0.19-beta" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="PCLStorage" Version="1.0.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.145-pre" />
     <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
